Meals on Ajax, binding